# DeltaZ

./: .gitmodules  CMakeLists.txt
DeltaZ/: CMakeLists.txt
DeltaZ/include/dz/: Geometry.hpp  Geometry.inl  Grid.hpp  Grid.inl  LaplaceSolver.hpp  LaplaceSolver.inl  Node.hpp  Node.inl  NodeVertex.hpp  NodeVertex.inl  Program.hpp  ResultApp.hpp  ResultLayer.hpp  TextRenderer.hpp  defines.hpp
DeltaZ/include/dz/Graphics/: GeometryShape.hpp  GeometryShape.inl  GridShape.hpp  GridShape.inl  Legend.hpp  Legend.inl  NodeVertex.hpp  ResultApp.hpp  ResultLayer.hpp  ResultRenderer.hpp
DeltaZ/include/dz/Solver/: Geometry.hpp  Geometry.inl  Grid.hpp  Grid.inl  LaplaceSolver.hpp  LaplaceSolver.inl  Node.hpp  Node.inl
DeltaZ/src/: Geometry.cpp  Grid.cpp  LaplaceSolver.cpp  Node.cpp  NodeVertex.cpp  Program.cpp  ResultApp.cpp  ResultLayer.cpp  TextRenderer.cpp  main.cpp
DeltaZ/src/Graphics/: GeometryShape.cpp  GridShape.cpp  Legend.cpp  NodeVertex.cpp  ResultApp.cpp  ResultLayer.cpp  ResultRenderer.cpp  TextRenderer.cpp
DeltaZ/src/Solver/: Geometry.cpp  Grid.cpp  LaplaceSolver.cpp  Node.cpp
ZucchiniGraphics/: CMakeLists.txt  config.hpp.in
ZucchiniGraphics/ZGraphics/: CMakeLists.txt
ZucchiniGraphics/ZGraphics/impl/detail/Common/: ContextImpl.cpp  ContextImpl.hpp
ZucchiniGraphics/ZGraphics/impl/detail/Input/: KeyboardImpl.cpp  KeyboardImpl.hpp  MouseImpl.hpp
ZucchiniGraphics/ZGraphics/impl/detail/Window/: WindowImpl.cpp  WindowImpl.hpp  WindowImpl.inl
ZucchiniGraphics/ZGraphics/include/: zgpch.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/: defines.hpp  zgraphics.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Camera/: Camera.hpp  OrthographicCamera.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Common/: Colors.hpp  Context.hpp  Image.hpp  Image.inl
ZucchiniGraphics/ZGraphics/include/zgraphics/Input/: Joystick.hpp  Keyboard.hpp  Mouse.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Input/Event/: KeyEvents.hpp  MouseEvents.hpp  MouseEvents.inl
ZucchiniGraphics/ZGraphics/include/zgraphics/Renderer/: DefaultRenderer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Shader.inl  Sprite.hpp  Sprite.inl  Texture.hpp  Texture.inl  TexturedMesh.hpp  Transform.hpp  Transform.inl  Vertex.hpp  Vertex2D.hpp  ViewProjection.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Renderer/Buffers/: Buffer.hpp  IndexBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Text/: Encoding.hpp  Font.hpp  Font.inl  Glyph.hpp  Glyph.inl
ZucchiniGraphics/ZGraphics/include/zgraphics/Window/: ContextSettings.hpp  FrameBufferSettings.hpp  Window.hpp  WindowSettings.hpp
ZucchiniGraphics/ZGraphics/include/zgraphics/Window/Event/: FrameBufferResisedEvent.hpp  WindowEvents.hpp  WindowEvents.inl
ZucchiniGraphics/ZGraphics/src/Camera/: Camera.cpp  OrthographicCamera.cpp
ZucchiniGraphics/ZGraphics/src/Common/: Context.cpp  Image.cpp
ZucchiniGraphics/ZGraphics/src/Input/: Joystick.cpp  Keyboard.cpp  Mouse.cpp
ZucchiniGraphics/ZGraphics/src/Input/Event/: KeyEvents.cpp  MouseEvents.cpp
ZucchiniGraphics/ZGraphics/src/Renderer/: DefaultRenderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Transform.cpp  Vertex2D.cpp
ZucchiniGraphics/ZGraphics/src/Renderer/Buffers/: Buffer.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
ZucchiniGraphics/ZGraphics/src/Text/: Font.cpp  Glyph.cpp
ZucchiniGraphics/ZGraphics/src/Window/: Window.cpp
ZucchiniGraphics/ZGraphics/src/Window/Event/: FrameBufferResisedEvent.cpp  WindowEvents.cpp
ZucchiniLib/: CMakeLists.txt  config.hpp.in
ZucchiniLib/Zucchini/: CMakeLists.txt
ZucchiniLib/Zucchini/include/: zepch.hpp
ZucchiniLib/Zucchini/include/zucchini/: defines.hpp  platform.hpp  types.hpp  zucchini.hpp
ZucchiniLib/Zucchini/include/zucchini/Backtrace/: CallStack.hpp  CallStack.inl  StackFrame.hpp
ZucchiniLib/Zucchini/include/zucchini/Common/: Arguments.hpp  Arguments.inl  CRTP.hpp  CRTP.inl  Console.hpp  Console.inl  Functor.hpp  NamedType.hpp  NamedType.inl  Observer.hpp  Random.hpp  System.hpp
ZucchiniLib/Zucchini/include/zucchini/Debug/: Assert.hpp  Tee.hpp  TodoBefore.hpp
ZucchiniLib/Zucchini/include/zucchini/Event/: Event.hpp  EventBus.hpp  EventDispatcher.hpp  EventSubscriber.hpp  EventSubscriber.inl
ZucchiniLib/Zucchini/include/zucchini/Exception/: Exception.hpp
ZucchiniLib/Zucchini/include/zucchini/Log/: ConsoleWriter.hpp  FileWriter.hpp  Logger.hpp  StreamWriter.hpp  Writer.hpp
ZucchiniLib/Zucchini/include/zucchini/Math/: Angle.hpp  Math.hpp  RangedNumeric.hpp  RangedNumeric.inl
ZucchiniLib/Zucchini/include/zucchini/Memory/: Allocator.hpp  New.hpp  StandardAllocator.hpp
ZucchiniLib/Zucchini/include/zucchini/Resource/: ResourceManager.hpp  ResourceManager.inl
ZucchiniLib/Zucchini/include/zucchini/Signal/: Listener.hpp  Signal.hpp
ZucchiniLib/Zucchini/include/zucchini/Stream/: FileOutputStream.hpp  OutputStream.hpp
ZucchiniLib/Zucchini/include/zucchini/Time/: Chrono.hpp  Date.hpp  Time.hpp
ZucchiniLib/Zucchini/include/zucchini/Util/: FileUtils.hpp  StringUtils.hpp
ZucchiniLib/Zucchini/src/Backtrace/: CallStack.cpp  StackFrame.cpp
ZucchiniLib/Zucchini/src/Common/: Arguments.cpp  Console.cpp  Random.cpp  System.cpp
ZucchiniLib/Zucchini/src/Debug/: Assert.cpp
ZucchiniLib/Zucchini/src/Event/: Event.cpp  EventBus.cpp  EventDispatcher.cpp
ZucchiniLib/Zucchini/src/Exception/: Exception.cpp
ZucchiniLib/Zucchini/src/Log/: ConsoleWriter.cpp  FileWriter.cpp  Logger.cpp  StreamWriter.cpp
ZucchiniLib/Zucchini/src/Math/: Angle.cpp  Math.cpp
ZucchiniLib/Zucchini/src/Memory/: New.cpp  StandardAllocator.cpp
ZucchiniLib/Zucchini/src/Stream/: FileOutputStream.cpp
ZucchiniLib/Zucchini/src/Time/: Chrono.cpp  Date.cpp  Time.cpp
ZucchiniLib/Zucchini/src/Util/: FileUtils.cpp
assets/shaders/: node.fs  node.vs  node3D.fs  node3D.vs  text.fs
geometries/: example.dzg  interpolate.dzg  square.dzg  square_capacitor.dzg  star.dzg  triple_capacitor.dzg
