CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(DeltaZ
        VERSION 0.0.1
        LANGUAGES C CXX)

SET(CMAKE_CONFIGURATION_TYPES Release Debug)

FIND_PACKAGE(Threads REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_SUBDIRECTORY(ZucchiniLib)
ADD_SUBDIRECTORY(ZucchiniGraphics)

ADD_SUBDIRECTORY(DeltaZ)

