CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(ZucchiniLib
        VERSION 0.3.0
        LANGUAGES C CXX
        )

SET(CMAKE_CONFIGURATION_TYPES Debug Release)

SET(ZucchiniLib_VERSION_STAGE "ex")
SET(ZucchiniLib_VERSION_DAY 04)
SET(ZucchiniLib_VERSION_MONTH 05)
SET(ZucchiniLib_VERSION_YEAR 22)

MESSAGE(STATUS "Configuring ZucchiniLib ${ZucchiniLib_VERSION_MAJOR}-${ZucchiniLib_VERSION_MINOR}.${ZucchiniLib_VERSION_PATCH}${ZucchiniLib_VERSION_STAGE} of ${ZucchiniLib_VERSION_MONTH}/${ZucchiniLib_VERSION_DAY}/${ZucchiniLib_VERSION_YEAR}...")

FIND_PACKAGE(Threads REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

SET(CMAKE_DEBUG_POSTFIX -d)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

CONFIGURE_FILE(config.hpp.in zeconfig.hpp @ONLY NEWLINE_STYLE LF)

ADD_SUBDIRECTORY(Zucchini/deps/fmt)
ADD_SUBDIRECTORY(Zucchini/deps/backward-cpp)
ADD_SUBDIRECTORY(Zucchini/deps/yaml-cpp)

ADD_SUBDIRECTORY(Zucchini)

